# curator-agent

./: .gitignore  LICENSE  README.md  config.yaml  pyproject.toml
scripts/: run.py
src/tech_watch/agents/: digest.py  filter.py  summary.py
src/tech_watch/collectors/: arxiv.py  base.py  base_api.py  base_pdf.py  hackernews.py  rss.py
src/tech_watch/config/: settings.py
src/tech_watch/graph/: pipeline.py  state.py
src/tech_watch/llm/: client.py
src/tech_watch/memory/: store.py
src/tech_watch/models/: article.py
src/tech_watch/output/: markdown.py
src/tech_watch/scheduler/: runner.py
tests/test_agents/: test_digest.py  test_filter.py  test_summary.py
tests/test_collectors/: test_arxiv.py  test_hackernews.py  test_rss.py
tests/test_config/: test_settings.py
tests/test_llm/: test_client.py
tests/test_memory/: test_store.py
